// Copyright 2024 Google LLC. All Rights Reserved.
// 
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
// 
//     http://www.apache.org/licenses/LICENSE-2.0
// 
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
syntax = "proto3";
// All generated protos should be opaque, with "xxx_hidden_" prepended to their field names.


package dcl;

import "proto/connector/sdk.proto";
import "proto/empty.proto";


enum LoggingBetaLogMetricMetricDescriptorLabelsValueTypeEnum {
  LoggingBetaLogMetricMetricDescriptorLabelsValueTypeEnumNO_VALUE_DO_NOT_USE = 0;
  LoggingBetaLogMetricMetricDescriptorLabelsValueTypeEnumSTRING = 1;
  LoggingBetaLogMetricMetricDescriptorLabelsValueTypeEnumBOOL = 2;
  LoggingBetaLogMetricMetricDescriptorLabelsValueTypeEnumINT64 = 3;
  LoggingBetaLogMetricMetricDescriptorLabelsValueTypeEnumDOUBLE = 4;
  LoggingBetaLogMetricMetricDescriptorLabelsValueTypeEnumDISTRIBUTION = 5;
  LoggingBetaLogMetricMetricDescriptorLabelsValueTypeEnumMONEY = 6;
}

enum LoggingBetaLogMetricMetricDescriptorMetricKindEnum {
  LoggingBetaLogMetricMetricDescriptorMetricKindEnumNO_VALUE_DO_NOT_USE = 0;
  LoggingBetaLogMetricMetricDescriptorMetricKindEnumGAUGE = 1;
  LoggingBetaLogMetricMetricDescriptorMetricKindEnumDELTA = 2;
  LoggingBetaLogMetricMetricDescriptorMetricKindEnumCUMULATIVE = 3;
}

enum LoggingBetaLogMetricMetricDescriptorValueTypeEnum {
  LoggingBetaLogMetricMetricDescriptorValueTypeEnumNO_VALUE_DO_NOT_USE = 0;
  LoggingBetaLogMetricMetricDescriptorValueTypeEnumSTRING = 1;
  LoggingBetaLogMetricMetricDescriptorValueTypeEnumBOOL = 2;
  LoggingBetaLogMetricMetricDescriptorValueTypeEnumINT64 = 3;
  LoggingBetaLogMetricMetricDescriptorValueTypeEnumDOUBLE = 4;
  LoggingBetaLogMetricMetricDescriptorValueTypeEnumDISTRIBUTION = 5;
  LoggingBetaLogMetricMetricDescriptorValueTypeEnumMONEY = 6;
}

enum LoggingBetaLogMetricMetricDescriptorLaunchStageEnum {
  LoggingBetaLogMetricMetricDescriptorLaunchStageEnumNO_VALUE_DO_NOT_USE = 0;
  LoggingBetaLogMetricMetricDescriptorLaunchStageEnumUNIMPLEMENTED = 1;
  LoggingBetaLogMetricMetricDescriptorLaunchStageEnumPRELAUNCH = 2;
  LoggingBetaLogMetricMetricDescriptorLaunchStageEnumEARLY_ACCESS = 3;
  LoggingBetaLogMetricMetricDescriptorLaunchStageEnumALPHA = 4;
  LoggingBetaLogMetricMetricDescriptorLaunchStageEnumBETA = 5;
  LoggingBetaLogMetricMetricDescriptorLaunchStageEnumGA = 6;
  LoggingBetaLogMetricMetricDescriptorLaunchStageEnumDEPRECATED = 7;
}

message LoggingBetaLogMetric {
  string name = 1;
  string description = 2;
  string filter = 3;
  bool disabled = 4;
  LoggingBetaLogMetricMetricDescriptor metric_descriptor = 5;
  string value_extractor = 6;
  map<string, string> label_extractors = 7;
  LoggingBetaLogMetricBucketOptions bucket_options = 8;
  string create_time = 9;
  string update_time = 10;
  string project = 11;
}

message LoggingBetaLogMetricMetricDescriptor {
  string name = 1;
  string type = 2;
  repeated LoggingBetaLogMetricMetricDescriptorLabels labels = 3;
  LoggingBetaLogMetricMetricDescriptorMetricKindEnum metric_kind = 4;
  LoggingBetaLogMetricMetricDescriptorValueTypeEnum value_type = 5;
  string unit = 6;
  string description = 7;
  string display_name = 8;
  LoggingBetaLogMetricMetricDescriptorMetadata metadata = 9;
  LoggingBetaLogMetricMetricDescriptorLaunchStageEnum launch_stage = 10;
  repeated string monitored_resource_types = 11;
}

message LoggingBetaLogMetricMetricDescriptorLabels {
  string key = 1;
  LoggingBetaLogMetricMetricDescriptorLabelsValueTypeEnum value_type = 2;
  string description = 3;
}

message LoggingBetaLogMetricMetricDescriptorMetadata {
  string sample_period = 1;
  string ingest_delay = 2;
}

message LoggingBetaLogMetricBucketOptions {
  LoggingBetaLogMetricBucketOptionsLinearBuckets linear_buckets = 1;
  LoggingBetaLogMetricBucketOptionsExponentialBuckets exponential_buckets = 2;
  LoggingBetaLogMetricBucketOptionsExplicitBuckets explicit_buckets = 3;
}

message LoggingBetaLogMetricBucketOptionsLinearBuckets {
  int64 num_finite_buckets = 1;
  double width = 2;
  double offset = 3;
}

message LoggingBetaLogMetricBucketOptionsExponentialBuckets {
  int64 num_finite_buckets = 1;
  double growth_factor = 2;
  double scale = 3;
}

message LoggingBetaLogMetricBucketOptionsExplicitBuckets {
  repeated double bounds = 1;
}

message ApplyLoggingBetaLogMetricRequest {
  LoggingBetaLogMetric resource = 1;
  repeated LifecycleDirective lifecycle_directives = 2;
  string service_account_file = 3;
}

message DeleteLoggingBetaLogMetricRequest {
  string service_account_file = 1;
  LoggingBetaLogMetric resource = 2;
}

message ListLoggingBetaLogMetricRequest {
  string service_account_file = 1;
  string Project = 2;
}

message ListLoggingBetaLogMetricResponse {
  repeated LoggingBetaLogMetric items = 1;
}

service LoggingBetaLogMetricService {
  rpc ApplyLoggingBetaLogMetric(ApplyLoggingBetaLogMetricRequest) returns (LoggingBetaLogMetric);
  rpc DeleteLoggingBetaLogMetric(DeleteLoggingBetaLogMetricRequest) returns (google.protobuf.Empty);
  rpc ListLoggingBetaLogMetric(ListLoggingBetaLogMetricRequest) returns (ListLoggingBetaLogMetricResponse);
}
